# CSC195

Containers/: CMakeLists.txt  main.cpp
DataBasesV2/: computerpart.h  cpu.cpp  cpu.h  cpu_window.ui  cpuwidget.cpp  cpuwidget.h  dbview.cpp  dbview.h  editorwidget.cpp  editorwidget.h  gpu.cpp  gpu.h  gpu_window.ui  main.cpp  main.json  mainwindow.ui  meson.build  ram.cpp  ram.h  ram_window.ui  ramwidget.cpp  ramwidget.h  ui_mainwindow.h
DataBasesV3/: computerpart.cpp  computerpart.h  dbview.cpp  dbview.h  editorwidget.cpp  editorwidget.h  gpu.cpp  gpu.h  main.cpp  mainwindow.ui  meson.build  ui_mainwindow.h
DataTypeImage/: CMakeLists.txt  main.cpp
FixMeCode/: CMakeLists.txt  circle.h  main.cpp  rectangle.h  shape.h
Fractions/: CMakeLists.txt  fraction.h  main.cpp
HelloWorld/: main.cpp
Memory/: CMakeLists.txt  main.cpp
NumberGuessingGame/: CMakeLists.txt  GuessingGame.cpp  GuessingGame.h  GuessingGameExecute.cpp  GuessingGameExecute.h  main.cpp
PrimativeDataTypes/: CMakeLists.txt  DataTypes.cpp
SelfPractice_1/enums/: enumSocket.cpp  enumSocket.h
UserDataTypes/: CMakeLists.txt  Employee.cpp  Employee.h  main.cpp
followAlong/: Animal.cpp  Animal.h  CMakeLists.txt  Snake.cpp  Snake.h  main.cpp
